DPO-3644 Osiv käytössä vain valituilla kontrollereilla (#126)
* DPO-3644 disable osiv

* DPO-3644 small fixes, use osiv for compositions